element overflow fix

--- a/app/styles/blog.scss
+++ b/app/styles/blog.scss
@@ -21,7 +21,7 @@
 
 .top-box {
   background: rgba(229, 77, 66, 1.0);
-  padding: 0.5rem;
+  padding: 1rem;
   position: relative;
 }
 
@@ -52,7 +52,7 @@
   display: flex;
   align-items: center;
   margin: 3rem;
-  width: calc(100 / 3 - 2rem);
+  width: calc(100 / 4 - 2rem);
 }
 
 .skills-card_item {
