--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -1,7 +1,7 @@
 .nav-bar {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 0.5rem 1rem;
   background: $c-nav-bar-top;
   color: $c-white;
